add link to readme and fix photo links

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="about-me">
             <h2 class="section-header">About Me</h2>
                 <div>
-                    <img src="../assets/me-photo-cropped.jpg" alt="photo of Stephen" id="head-shot"/>
+                    <img src="assets/me-photo-cropped.jpg" alt="photo of Stephen" id="head-shot"/>
                 <p>I was born in California but grew up in Houston, Texas before moving back here in 2002.  I've spent over 20 years in the sign & graphic industry in graphic design, sales and finally as the owner of my own shop in Carlsbad. Some notable clients included the La Costa Resort and the Carlsbad Outlet Mall, where I outfitted both places with most of their signage.  Things got tough after the pandemic so I decided to seek a new career path in web development. I hope to use this space to showcase my web development work, as well as the skills I learned in design and customer service from my previous career.</p>
                 <p>Please have a look around and feel free to reach out to me at the contacts below. Thank you!</p>
                 </div>
@@ -43,28 +43,28 @@
                 <div class="project-photos">
                     <figure id="first-project">
                         <a href="https://bsidemyself.github.io/prework-study-guide/">
-                            <img src='../assets/project-1-photo.jpg' alt='photo of a nebula'>
+                            <img src='assets/project-1-photo.jpg' alt='photo of a nebula'>
                         </a>
                         <figcaption>Bootcamp Prework Study Guide</figcaption>
                     </figure>
 
                     <figure>
                         <a href="https://bsidemyself.github.io/sshackleton-week1-challenge/">
-                        <img src='../assets/space-photo-2.jpg' alt='photo of a earth'>
+                        <img src='assets/space-photo-2.jpg' alt='photo of a earth'>
                         </a>
                         <figcaption>Horiseon Accessibility Refactor</figcaption>
                     </figure>
 
                     <figure>
-                        <a href="../assets/space-photo-3.jpg">
-                        <img src='../assets/space-photo-3.jpg' alt='photo of yellow star'>
+                        <a href="assets/space-photo-3.jpg">
+                        <img src='assets/space-photo-3.jpg' alt='photo of yellow star'>
                         </a>
                          <figcaption>Style Page for a Yellow Star</figcaption>
                     </figure>
 
                     <figure>
-                        <a href="../assets/space-photo-4.jpg">
-                        <img src='../assets/space-photo-4.jpg' alt='photo of purple star'>
+                        <a href="assets/space-photo-4.jpg">
+                        <img src='assets/space-photo-4.jpg' alt='photo of purple star'>
                         </a>
                         <figcaption>The Purple Star Readme</figcaption>
                     </figure>
