fixed spelling error in caption

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a href="assets/space-photo-3.jpg">
                         <img src='assets/space-photo-3.jpg' alt='photo of yellow star'>
                         </a>
-                         <figcaption>Style Page for a Yellow Star</figcaption>
+                         <figcaption>Style Page for the Yellow Star</figcaption>
                     </figure>
 
                     <figure>
